# swagger/swagger.yml
@@ -11,39 +11,39 @@ info:
     url: http://www.apache.org/licenses/LICENSE-2.0.html
 basePath: /v1
 paths:
-  /medical/:
-    post:
-      tags:
-      - medical
-      description: create medical
-      parameters:
-      - in: body
-        name: body
-        description: The medical content
-        required: true
-        schema:
-          $ref: '#/definitions/models.Medical'
-      responses:
-        "200":
-          description: ""
-        "403":
-          description: body is empty
-  /medical/{deviceNo}:
+  /medical/{idCard}:
     get:
       tags:
       - medical
-      description: find medical by deviceNo
+      description: find medical by idCard
       parameters:
       - in: path
-        name: deviceNo
-        description: the deviceNo you want to get
+        name: idCard
+        description: the idCard you want to get
         required: true
         type: string
       responses:
         "200":
-          description: '{medical} models.Object'
+          description: '{medical} models.Medical'
         "403":
-          description: :deviceNo is empty
+          description: :idCard is empty
+  /medical/UploadFile:
+    post:
+      tags:
+      - medical
+      description: UploadFile
+      parameters:
+      - in: body
+        name: body
+        description: The UploadFile content
+        required: true
+        schema:
+          $ref: '#/definitions/multipart.File'
+      responses:
+        "200":
+          description: '{string} hash'
+        "403":
+          description: body is empty
   /object/:
     get:
       tags:
@@ -351,25 +351,6 @@ paths:
         "403":
           description: :deviceNo is empty
 definitions:
-  models.Medical:
-    title: Medical
-    type: object
-    properties:
-      CreatedAt:
-        type: string
-        format: datetime
-      DataId:
-        type: string
-      DeletedAt:
-        type: string
-        format: datetime
-      FileHash:
-        type: string
-      IdCard:
-        type: string
-      UpdatedAt:
-        type: string
-        format: datetime
   models.Object:
     title: Object
     type: object
@@ -478,6 +459,9 @@ definitions:
       UpdatedAt:
         type: string
         format: datetime
+  multipart.File:
+    title: File
+    type: object
 tags:
 - name: wristband
   description: |
